src/testData/analysis/unicodeBlocks.cr
#EXTRA_ATTRIBUTE: CrCharCodeElement.getEscapedChar

'\u{<warning descr="">1</warning>}'

'\u{<warning descr="">1A</warning>}'

'\u{<warning descr="ƫ">1Ab</warning>}'

'\u{<warning descr="ꬭ">1Ab2D</warning>}'

'\u{<warning descr="ꬭ">01Ab2D</warning>}'

'\u{<warning descr="￿">10FFFF</warning>}'

'\u{<error descr="Invalid Unicode codepoint"><warning descr="">110000</warning></error>}'

'\u{<error descr="Invalid Unicode codepoint"><warning descr="">AAAAAA</warning></error>}'

"\u{<warning descr="">1</warning>}"

"\u{<warning descr="">1A</warning>}"

"\u{<warning descr="ƫ">1Ab</warning>}"

"\u{<warning descr="ꬭ">1Ab2D</warning>}"

"\u{<warning descr="ꬭ">01Ab2D</warning>}"

"\u{<warning descr="￿">10FFFF</warning>}"

"\u{<error descr="Invalid Unicode codepoint"><warning descr="">110000</warning></error>}"

"\u{<error descr="Invalid Unicode codepoint"><warning descr="">AAAAAA</warning></error>}"